CrOS Shelf: Fix RTL drag gesture

Before this CL, given the reverse X coordinates in RTL, a drag towards
one direction would cause the dragged view to move in the opposite
direction.

Bug: 913092
Change-Id: I7454d9161d91d459cedcccd1e8da0a2b10918655
Reviewed-on: https://chromium-review.googlesource.com/c/1373452
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#616730}(cherry picked from commit 455885227feb9eaeb8bacf2e1e4b26f1a00308a6 [formerly f8c4efaa5e792c591f9c2f8e454b17b9b2d96262])
Reviewed-on: https://chromium-review.googlesource.com/c/1380542
Reviewed-by: Manu Cornet <manucornet@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#405}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: d2d2d3eceeeca2c43a85335bf3ff502dd3936d43